--- a/x-pack/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/90_ml_data_frame_analytics_crud.yml
+++ b/x-pack/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/90_ml_data_frame_analytics_crud.yml
@@ -3,18 +3,22 @@
 
   - do:
       ml.get_data_frame_analytics:
-        id: "old-cluster-outlier_detection_job"
+        id: "old_cluster_outlier_detection_job"
   - match: { count: 1 }
-  - match: { data_frame_analytics.0.id: "old-cluster-outlier_detection_job" }
+  - match: { data_frame_analytics.0.id: "old_cluster_outlier_detection_job" }
+  - match: { data_frame_analytics.0.source.index: ["bwc_ml_outlier_detection_job_source"] }
+  - match: { data_frame_analytics.0.source.query: {"term" : { "user" : "Kimchy" }} }
+  - match: { data_frame_analytics.0.dest.index: "old_cluster_outlier_detection_job_results" }
+  - match: { data_frame_analytics.0.analysis: {"outlier_detection":{}} }
 
 ---
 "Get old outlier_detection job stats":
 
   - do:
       ml.get_data_frame_analytics_stats:
-        id: "old-cluster-outlier_detection_job"
+        id: "old_cluster_outlier_detection_job"
   - match: { count: 1 }
-  - match: { data_frame_analytics.0.id: "old-cluster-outlier_detection_job" }
+  - match: { data_frame_analytics.0.id: "old_cluster_outlier_detection_job" }
   - match: { data_frame_analytics.0.state: "stopped" }
 
 ---
@@ -22,16 +26,39 @@
 
   - do:
       ml.get_data_frame_analytics:
-        id: "old-cluster-regression_job"
+        id: "old_cluster_regression_job"
   - match: { count: 1 }
-  - match: { data_frame_analytics.0.id: "old-cluster-regression_job" }
+  - match: { data_frame_analytics.0.id: "old_cluster_regression_job" }
+  - match: { data_frame_analytics.0.source.index: ["bwc_ml_regression_job_source"] }
+  - match: { data_frame_analytics.0.source.query: {"term": { "user": "Kimchy" }} }
+  - match: { data_frame_analytics.0.dest.index: "old_cluster_regression_job_results" }
+  - match: { data_frame_analytics.0.analysis: {"regression":{ "dependent_variable": "foo", "training_percent": 100.0 }} }
 
 ---
 "Get old regression job stats":
 
   - do:
       ml.get_data_frame_analytics_stats:
-        id: "old-cluster-regression_job"
+        id: "old_cluster_regression_job"
   - match: { count: 1 }
-  - match: { data_frame_analytics.0.id: "old-cluster-regression_job" }
+  - match: { data_frame_analytics.0.id: "old_cluster_regression_job" }
   - match: { data_frame_analytics.0.state: "stopped" }
+
+---
+"Put an outlier_detection job on the mixed cluster":
+
+  - do:
+      ml.put_data_frame_analytics:
+        id: "mixed_cluster_outlier_detection_job"
+        body: >
+          {
+            "source": {
+              "index": "bwc_ml_outlier_detection_job_source",
+              "query": {"term" : { "user" : "Kimchy" }}
+            },
+            "dest": {
+              "index": "mixed_cluster_outlier_detection_job_results"
+            },
+            "analysis": {"outlier_detection":{}}
+          }
+  - match: { id: "mixed_cluster_outlier_detection_job" }
